--- a/corp_food_order_web_app/main_app/templates/index.html
+++ b/corp_food_order_web_app/main_app/templates/index.html
@@ -4,7 +4,8 @@
 	<title>Заказ корпоративной еды</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	<!----><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	
 </head>
 <body>
 <div class="bg-primary text-white p-5 text-center">
@@ -29,6 +30,14 @@
 		</tr>
 		{% endfor %}
 	</table>
+	
+	<form method="POST">
+		{% csrf_token %}
+		<table>
+			{{ order_form }}
+		</table>
+		<input type="submit" value="Отправить заказ" >
+	</form>
 	
 	<p><button type="button" class="btn btn-warning">ОПЦИОНАЛЬНО Мне повезёт</button></p>
 	<button type="button" class="btn btn-primary btn-lg">Отправить заказ</button>
