--- a/corp_food_order_web_app/main_app/templates/index.html
+++ b/corp_food_order_web_app/main_app/templates/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
 	<title>Заказ корпоративной еды</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!----><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+	<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">-->
+	
+	<!-- Load required Bootstrap and BootstrapVue CSS -->
+	<link type="text/css" rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.min.css" />
+	<link type="text/css" rel="stylesheet" href="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.css" />
+
+	<!-- Load polyfills to support older browsers -->
+	<script src="https://polyfill.io/v3/polyfill.min.js?features=es2015%2CIntersectionObserver" crossorigin="anonymous"></script>
+
+	<!-- Load Vue followed by BootstrapVue -->
+	<script src="https://unpkg.com/vue@latest/dist/vue.min.js"></script>
+	<script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.js"></script>
+	
+	<!-- Load the following for BootstrapVueIcons support -->
+	<script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue-icons.min.js"></script>
 	
 </head>
 <body>
@@ -13,41 +28,63 @@
 </div>
 
 <div>
-	<p>ОПЦИОНАЛЬНО		История заказов,		Отчет "Заказ еды на дату"</p>
+	<!--<p>ОПЦИОНАЛЬНО		История заказов,		Отчет "Заказ еды на дату"</p>-->
 	
 	<form method="POST">
 		{% csrf_token %}
-		<div>
-			Ваше имя:{{ order_form.person }}
-			Дата заказа:{{ order_form.date }}
+		
+		<div class="container">
+		<div class="row">
+			<div class="col-sm-4">
+			<select class="form-select" name="person">
+				<option selected>Выберите себя</option>
+				{% for person in persons %}
+				<option value="{{ person }}">{{ person.name }}</option>
+				{% endfor %}
+			</select>
+			</div>
+			<div class="col-sm-4">
+				<!--Ваше имя:{{ order_form.person }}-->
+				Дата заказа:{{ order_form.date }}
+			</div>
+		</div>
 		</div>
 		
+		<div class="container">
 		<h2>Меню</h2>
-		<table>
+		<table class="table table-bordered">
 			<!--{{ order_form.food_list }}-->
-			<thead><th>Название</th><th>Состав</th><th>Цена</th><th></th><th>Кол-во</th><th></th></thead>
+			<thead><th class="text-center">Название</th><th>Состав</th><th class="text-center">Цена</th><!--<th></th>--><th class="text-center">Кол-во</th><!--<th></th>--></thead>
+			<tbody class="table-group-divider">
 			{% for food in order_form.food_list %}
 			<tr>
-				<td>{{ food.food.name }}</td>
+				<td><h3 class="text-center">{{ food.food.name }}</h3></td>
 				<td>{{ food.food.ingredients }}</td>
 				<td>{{ food.food.price }} руб.</td>
-				<td><button type="button" class="btn btn-success">+</button></td>
-				<td>{{ food.amount }}</td>
-				<td><button type="button" class="btn btn-danger">-</button></td>
+				<!--<td><button type="button" class="btn btn-success">+</button></td>-->
+				<!--<td>{{ food.amount }}</td>-->
+				<td><input class="form-control" name="amount" type="number" min="0" max="99" value="0"></td>
+				<!--<td><button type="button" class="btn btn-danger">-</button></td>-->
 			</tr>
 			{% endfor %}
+			</tbody>
 		</table>
+		</div>
 		
+		<!--
 		{% for field in order_form.amount_fields %}
 		{{ field }}
 		{% endfor %}
+		-->
 		
+		<div class="container">
 		<input type="submit" class="btn btn-primary btn-lg" value="Отправить заказ" >
+		</div>
 	</form>
 	
-	<p><button type="button" class="btn btn-warning">ОПЦИОНАЛЬНО Мне повезёт</button></p>
+	<!--<p><button type="button" class="btn btn-warning">ОПЦИОНАЛЬНО Мне повезёт</button></p>-->
 	<!--<button type="button" class="btn btn-primary btn-lg">Отправить заказ</button>-->
-	<button type="button" class="btn btn-secondary btn-lg">Отчистить заказ</button>
+	<!--<button type="button" class="btn btn-secondary btn-lg">Отчистить заказ</button>-->
 </div>
 
 </body>
