--- a/corp_food_order_web_app/main_app/templates/index.html
+++ b/corp_food_order_web_app/main_app/templates/index.html
@@ -27,17 +27,17 @@
 	<h1>Заказ корпоративной еды</h1> 
 </div>
 
-<div>
+<div class="bg-body">
 	<!--<p>ОПЦИОНАЛЬНО		История заказов,		Отчет "Заказ еды на дату"</p>-->
 	
 	<form method="POST">
 		{% csrf_token %}
 		
-		<div class="container">
+		<div class="container p-2">
 		<div class="row">
 			<div class="col-sm-4">
 			<select class="form-select" name="person">
-				<option selected>Выберите себя</option>
+				<option selected>Выберите себя в списке сотрудников</option>
 				{% for person in persons %}
 				<option value="{{ person.id }}">{{ person.name }}</option>
 				{% endfor %}
@@ -45,16 +45,23 @@
 			</div>
 			<div class="col-sm-4">
 				<!--Ваше имя:{{ order_form.person }}-->
-				Дата заказа:{{ order_form.date }}
+				Дата заказа: {{ order_form.date }}
 			</div>
 		</div>
 		</div>
 		
 		<div class="container">
 		<h2 class="text-center">Меню</h2>
-		<table class="table table-bordered" id="menu_table">
+		<table class="table table-bordered border-dark" id="menu_table">
 			<!--{{ order_form.food_list }}-->
-			<thead><th class="text-center">Название</th><th>Состав</th><th class="text-center">Цена</th><!--<th></th>--><th class="text-center">Кол-во</th><!--<th></th>--></thead>
+			<thead>
+				<th class="text-center col-sm-3">Название</th>
+				<th>Состав</th>
+				<th class="text-center col-sm-1">Цена</th>
+				<!--<th></th>-->
+				<th class="text-center">Количество</th>
+				<!--<th></th>-->
+			</thead>
 			<tbody class="table-group-divider">
 			{% for food in order_form.food_list %}
 			<tr>
