--- a/corp_food_order_web_app/main_app/templates/index.html
+++ b/corp_food_order_web_app/main_app/templates/index.html
@@ -23,76 +23,93 @@
 	
 </head>
 <body>
-<div class="bg-primary text-white p-5 text-center">
-	<h1>Заказ корпоративной еды</h1> 
-</div>
 
-<div class="bg-body">
-	<!--<p>ОПЦИОНАЛЬНО		История заказов,		Отчет "Заказ еды на дату"</p>-->
-	
-	<form method="POST">
-		{% csrf_token %}
+	<div class="container">
+		<header class="d-flex justify-content-center py-1">
+			<ul class="nav nav-pills">
+				<li class="nav-item">
+					<a href="/" class="nav-link text-secondary"><h4>Меню</h4></a>
+				</li>
+				<li class="nav-item">
+					<a href="/" class="nav-link"><h4>История</h4></a>
+				</li>
+				<li class="nav-item">
+					<a href="/" class="nav-link"><h4>Отчет</h4></a>
+				</li>
+			</ul>
+		</header>
+	</div>
+
+	<div class="bg-primary text-white p-5 text-center">
+		<h1>Заказ корпоративной еды</h1> 
+	</div>
+
+	<div class="bg-body">
+		<!--<p>ОПЦИОНАЛЬНО		История заказов,		Отчет "Заказ еды на дату"</p>-->
 		
-		<div class="container p-2">
-		<div class="row">
-			<div class="col-sm-4">
-			<select class="form-select" name="person">
-				<option selected>Выберите себя в списке сотрудников</option>
-				{% for person in persons %}
-				<option value="{{ person.id }}">{{ person.name }}</option>
+		<form method="POST">
+			{% csrf_token %}
+			
+			<div class="container p-2">
+			<div class="row">
+				<div class="col-sm-4">
+				<select class="form-select" name="person">
+					<option selected>Выберите себя в списке сотрудников</option>
+					{% for person in persons %}
+					<option value="{{ person.id }}">{{ person.name }}</option>
+					{% endfor %}
+				</select>
+				</div>
+				<div class="col-sm-4">
+					<!--Ваше имя:{{ order_form.person }}-->
+					Дата заказа: {{ order_form.date }}
+				</div>
+			</div>
+			</div>
+			
+			<div class="container">
+			<h2 class="text-center">Меню</h2>
+			<table class="table table-bordered border-dark" id="menu_table">
+				<!--{{ order_form.food_list }}-->
+				<thead>
+					<th class="text-center col-sm-3">Название</th>
+					<th>Состав</th>
+					<th class="text-center col-sm-1">Цена</th>
+					<!--<th></th>-->
+					<th class="text-center">Количество</th>
+					<!--<th></th>-->
+				</thead>
+				<tbody class="table-group-divider">
+				{% for food in order_form.food_list %}
+				<tr>
+					<td><h3 class="text-center">{{ food.food.name }}</h3></td>
+					<td>{{ food.food.ingredients }}</td>
+					<td>{{ food.food.price }} руб.</td>
+					<!--<td><button type="button" class="btn btn-success">+</button></td>-->
+					<!--<td>{{ food.amount }}</td>-->
+					<td><input class="form-control" name="amount" type="number" min="0" max="99" value="0"></td>
+					<!--<td><button type="button" class="btn btn-danger">-</button></td>-->
+				</tr>
 				{% endfor %}
-			</select>
+				</tbody>
+			</table>
 			</div>
-			<div class="col-sm-4">
-				<!--Ваше имя:{{ order_form.person }}-->
-				Дата заказа: {{ order_form.date }}
-			</div>
-		</div>
-		</div>
-		
-		<div class="container">
-		<h2 class="text-center">Меню</h2>
-		<table class="table table-bordered border-dark" id="menu_table">
-			<!--{{ order_form.food_list }}-->
-			<thead>
-				<th class="text-center col-sm-3">Название</th>
-				<th>Состав</th>
-				<th class="text-center col-sm-1">Цена</th>
-				<!--<th></th>-->
-				<th class="text-center">Количество</th>
-				<!--<th></th>-->
-			</thead>
-			<tbody class="table-group-divider">
-			{% for food in order_form.food_list %}
-			<tr>
-				<td><h3 class="text-center">{{ food.food.name }}</h3></td>
-				<td>{{ food.food.ingredients }}</td>
-				<td>{{ food.food.price }} руб.</td>
-				<!--<td><button type="button" class="btn btn-success">+</button></td>-->
-				<!--<td>{{ food.amount }}</td>-->
-				<td><input class="form-control" name="amount" type="number" min="0" max="99" value="0"></td>
-				<!--<td><button type="button" class="btn btn-danger">-</button></td>-->
-			</tr>
+			
+			<!--
+			{% for field in order_form.amount_fields %}
+			{{ field }}
 			{% endfor %}
-			</tbody>
-		</table>
-		</div>
+			-->
+			
+			<div class="container">
+			<input type="submit" class="btn btn-primary btn-lg" value="Отправить заказ" >
+			</div>
+		</form>
 		
-		<!--
-		{% for field in order_form.amount_fields %}
-		{{ field }}
-		{% endfor %}
-		-->
-		
-		<div class="container">
-		<input type="submit" class="btn btn-primary btn-lg" value="Отправить заказ" >
-		</div>
-	</form>
-	
-	<!--<p><button type="button" class="btn btn-warning">ОПЦИОНАЛЬНО Мне повезёт</button></p>-->
-	<!--<button type="button" class="btn btn-primary btn-lg">Отправить заказ</button>-->
-	<!--<button type="button" class="btn btn-secondary btn-lg">Отчистить заказ</button>-->
-</div>
+		<!--<p><button type="button" class="btn btn-warning">ОПЦИОНАЛЬНО Мне повезёт</button></p>-->
+		<!--<button type="button" class="btn btn-primary btn-lg">Отправить заказ</button>-->
+		<!--<button type="button" class="btn btn-secondary btn-lg">Отчистить заказ</button>-->
+	</div>
 
 </body>
 </html>
