--- a/corp_food_order_web_app/main_app/templates/message.html
+++ b/corp_food_order_web_app/main_app/templates/message.html
@@ -8,21 +8,23 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
+
 	<div class="container">
-		<header class="d-flex justify-content-center py-3">
+		<header class="d-flex justify-content-center py-1">
 			<ul class="nav nav-pills">
 				<li class="nav-item">
-					<a href="/" class="nav-link active" aria-current="page">Home</a>
+					<a href="/" class="nav-link"><h4>Меню</h4></a>
 				</li>
 				<li class="nav-item">
-					<a href="/" class="nav-link">Features</a>
+					<a href="/" class="nav-link"><h4>История</h4></a>
 				</li>
 				<li class="nav-item">
-					<a href="/" class="nav-link">Features</a>
+					<a href="/" class="nav-link"><h4>Отчет</h4></a>
 				</li>
 			</ul>
 		</header>
 	</div>
+	
 	<div class="bg-primary text-white p-5 text-center">
 		<h1>Заказ корпоративной еды</h1> 
 	</div>
