--- a/corp_food_order_web_app/main_app/templates/index.html
+++ b/corp_food_order_web_app/main_app/templates/index.html
@@ -31,10 +31,10 @@
 					<a href="/" class="nav-link text-secondary"><h4>Меню</h4></a>
 				</li>
 				<li class="nav-item">
-					<a href="/" class="nav-link"><h4>История</h4></a>
+					<a href="history/" class="nav-link"><h4>История</h4></a>
 				</li>
 				<li class="nav-item">
-					<a href="/" class="nav-link"><h4>Отчет</h4></a>
+					<a href="report/" class="nav-link"><h4>Отчет</h4></a>
 				</li>
 			</ul>
 		</header>
