--- a/corp_food_order_web_app/main_app/templates/index.html
+++ b/corp_food_order_web_app/main_app/templates/index.html
@@ -5,25 +5,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-	<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">-->
-	
-	<!-- Load required Bootstrap and BootstrapVue CSS -->
-	<link type="text/css" rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.min.css" />
-	<link type="text/css" rel="stylesheet" href="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.css" />
-
-	<!-- Load polyfills to support older browsers -->
-	<script src="https://polyfill.io/v3/polyfill.min.js?features=es2015%2CIntersectionObserver" crossorigin="anonymous"></script>
-
-	<!-- Load Vue followed by BootstrapVue -->
-	<script src="https://unpkg.com/vue@latest/dist/vue.min.js"></script>
-	<script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.js"></script>
-	
-	<!-- Load the following for BootstrapVueIcons support -->
-	<script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue-icons.min.js"></script>
-	
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-
 	<div class="container">
 		<header class="d-flex justify-content-center py-1">
 			<ul class="nav nav-pills">
@@ -39,77 +23,52 @@
 			</ul>
 		</header>
 	</div>
-
 	<div class="bg-primary text-white p-5 text-center">
 		<h1>Заказ корпоративной еды</h1> 
 	</div>
-
 	<div class="bg-body">
-		<!--<p>ОПЦИОНАЛЬНО		История заказов,		Отчет "Заказ еды на дату"</p>-->
-		
 		<form method="POST">
 			{% csrf_token %}
-			
 			<div class="container p-2">
-			<div class="row">
-				<div class="col-sm-4">
-				<select class="form-select" name="person">
-					<option selected>Выберите себя в списке сотрудников</option>
-					{% for person in persons %}
-					<option value="{{ person.id }}">{{ person.name }}</option>
-					{% endfor %}
-				</select>
+				<div class="row">
+					<div class="col-sm-4">
+						<select class="form-select" name="person">
+							<option selected>Выберите себя в списке сотрудников</option>
+							{% for person in persons %}
+							<option value="{{ person.id }}">{{ person.name }}</option>
+							{% endfor %}
+						</select>
+					</div>
+					<div class="col-sm-4">
+						Дата заказа: {{ order_form.date }}
+					</div>
 				</div>
-				<div class="col-sm-4">
-					<!--Ваше имя:{{ order_form.person }}-->
-					Дата заказа: {{ order_form.date }}
-				</div>
 			</div>
-			</div>
-			
 			<div class="container">
-			<h2 class="text-center">Меню</h2>
-			<table class="table table-bordered border-dark" id="menu_table">
-				<!--{{ order_form.food_list }}-->
-				<thead>
-					<th class="text-center col-sm-3">Название</th>
-					<th>Состав</th>
-					<th class="text-center col-sm-1">Цена</th>
-					<!--<th></th>-->
-					<th class="text-center">Количество</th>
-					<!--<th></th>-->
-				</thead>
-				<tbody class="table-group-divider">
-				{% for food in order_form.food_list %}
-				<tr>
-					<td><h3 class="text-center">{{ food.food.name }}</h3></td>
-					<td>{{ food.food.ingredients }}</td>
-					<td>{{ food.food.price }} руб.</td>
-					<!--<td><button type="button" class="btn btn-success">+</button></td>-->
-					<!--<td>{{ food.amount }}</td>-->
-					<td><input class="form-control" name="amount" type="number" min="0" max="99" value="0"></td>
-					<!--<td><button type="button" class="btn btn-danger">-</button></td>-->
-				</tr>
-				{% endfor %}
-				</tbody>
-			</table>
+				<h2 class="text-center">Меню</h2>
+				<table class="table table-bordered border-dark" id="menu_table">
+					<thead>
+						<th class="text-center col-sm-3">Название</th>
+						<th>Состав</th>
+						<th class="text-center col-sm-1">Цена</th>
+						<th class="text-center">Количество</th>
+					</thead>
+					<tbody class="table-group-divider">
+						{% for food in order_form.food_list %}
+						<tr>
+							<td><h3 class="text-center">{{ food.food.name }}</h3></td>
+							<td>{{ food.food.ingredients }}</td>
+							<td>{{ food.food.price }} руб.</td>
+							<td><input class="form-control" name="amount" type="number" min="0" max="99" value="0"></td>
+						</tr>
+						{% endfor %}
+					</tbody>
+				</table>
 			</div>
-			
-			<!--
-			{% for field in order_form.amount_fields %}
-			{{ field }}
-			{% endfor %}
-			-->
-			
 			<div class="container">
-			<input type="submit" class="btn btn-primary btn-lg" value="Отправить заказ" >
+				<input type="submit" class="btn btn-primary btn-lg" value="Отправить заказ" >
 			</div>
 		</form>
-		
-		<!--<p><button type="button" class="btn btn-warning">ОПЦИОНАЛЬНО Мне повезёт</button></p>-->
-		<!--<button type="button" class="btn btn-primary btn-lg">Отправить заказ</button>-->
-		<!--<button type="button" class="btn btn-secondary btn-lg">Отчистить заказ</button>-->
 	</div>
-
 </body>
 </html>
