--- a/corp_food_order_web_app/main_app/templates/report.html
+++ b/corp_food_order_web_app/main_app/templates/report.html
@@ -8,7 +8,6 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-
 	<div class="container">
 		<header class="d-flex justify-content-center py-1">
 			<ul class="nav nav-pills">
@@ -24,49 +23,45 @@
 			</ul>
 		</header>
 	</div>
-	
 	<div class="bg-primary text-white p-5 text-center">
 		<h1>Заказ корпоративной еды</h1> 
 	</div>
-	
 	<div class="bg-body">
 		<form method="POST">
 			{% csrf_token %}
-			
 			<div class="container p-2">
-			<div class="row">
-				<div class="col-sm-4">
-					Дата заказа: {{ date_form.date }}
+				<div class="row">
+					<div class="col-sm-4">
+						Дата заказа: {{ date_form.date }}
+					</div>
+					<div class="col-sm-4">
+						<input type="submit" class="btn btn-info btn-lg" value="Получить отчет на дату">
+					</div>
 				</div>
-				<div class="col-sm-4">
-					<input type="submit" class="btn btn-info btn-lg" value="Получить отчет на дату">
-				</div>
-			</div>
 			</div>
 		</form>
 		<h2 class="text-center">Заказ еды на дату: {{ date }}</h2>
 		<h2 class="text-center">Итого: {{ overall_sum }} руб.</h2>
 		<div class="container p-2">
 			<table class="table table-bordered border-dark" id="menu_table">
-			<thead>
-				<th class="text-center col-sm-3">Блюдо</th>
-				<th class="text-center">Кол-во</th>
-				<th class="text-center col-sm-1">Цена</th>
-				<th class="text-center">Сумма</th>
-			</thead>
-			<tbody class="table-group-divider">
-			{% for food in food_list %}
-				<tr>
-					<td><h4 class="text-center">{{ food.name }}</h4></td>
-					<td><h4 class="text-center">{{ food.amount }}</h4></td>
-					<td><p class="text-center">{{ food.price }} руб.<p></td>
-					<td><h4 class="text-center">{{ food.sum }} руб.</h4></td>
-				</tr>
-			{% endfor %}
-			</tbody>
-			
+				<thead>
+					<th class="text-center col-sm-3">Блюдо</th>
+					<th class="text-center">Кол-во</th>
+					<th class="text-center col-sm-1">Цена</th>
+					<th class="text-center">Сумма</th>
+				</thead>
+				<tbody class="table-group-divider">
+				{% for food in food_list %}
+					<tr>
+						<td><h4 class="text-center">{{ food.name }}</h4></td>
+						<td><h4 class="text-center">{{ food.amount }}</h4></td>
+						<td><p class="text-center">{{ food.price }} руб.<p></td>
+						<td><h4 class="text-center">{{ food.sum }} руб.</h4></td>
+					</tr>
+				{% endfor %}
+				</tbody>
+			</table>
 		</div>
-		
 	</div>
 </body>
 </html>
